Fixes bar overflow and components positioning.

--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -1,6 +1,5 @@
 .page {
     width: 1280px;
-    height: auto;
     min-height: 1080px;
     background-color: white;
 }
