--- a/frontend/src/components/NavigationBar/NavigationBar.module.css
+++ b/frontend/src/components/NavigationBar/NavigationBar.module.css
@@ -1,5 +1,5 @@
 .navigation_bar {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1000;
     display: flex;
